testdata/baselines/reference/submodule/compiler/excessPropertyErrorsSuppressed.errors.txt
excessPropertyErrorsSuppressed.ts(1,38): error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{ a: string; }'.


==== excessPropertyErrorsSuppressed.ts (1 errors) ====
    var x: { a: string } = { a: "hello", b: 42 };  // No error
                                         ~
!!! error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{ a: string; }'.
    